Avoid off-center spinventory items on mobile.

--- a/app.css
+++ b/app.css
@@ -233,7 +233,8 @@ button {
   background-color: #111;
   padding: 1em;
   margin-bottom: 1em;
-  margin-right: 1em;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 #spinventory .spinner-item .description {
